fix color contrast 508 issue pertaining to add button color

--- a/src/_scss/pages/search/_searchOption.scss
+++ b/src/_scss/pages/search/_searchOption.scss
@@ -39,6 +39,7 @@
     .filter-add-button {
         height: 32px;
         margin: 0;
+        color: #fff;
     }
 
     @import "./_filterExpand";
